# invenio-translations-de-tugraz-experiment

./: .gitignore  MANIFEST.in  README.rst  pyproject.toml
invenio_translations_de/translations/: messages.pot  tx_config
invenio_translations_de/translations/de/LC_MESSAGES/: messages.mo  messages.po
invenio_translations_de/ui/: de.json  tx_config
